solved the jumping eliminated focus line

--- a/public/css/Xfreelancing.css
+++ b/public/css/Xfreelancing.css
@@ -91,7 +91,6 @@ form .question input[type="tel"]:focus ~ label{-moz-transform:translate(0, -35px
 form .question input[type="tel"]:valid ~ label{text-transform:uppercase;font-style:italic;-moz-transform:translate(5px, -35px) scale(0.6);-ms-transform:translate(5px, -35px) scale(0.6);-webkit-transform:translate(5px, -35px) scale(0.6);transform:translate(5px, -35px) scale(0.6);}
 input{resize:horizontal;width:140px;}
 input:active{width:auto;}
-input:focus{min-width:140px;}
 .transition, form button, form .question label, form .question input[type="text"]{-moz-transition:all 0.25s cubic-bezier(0.53, 0.01, 0.35, 1.5);-o-transition:all 0.25s cubic-bezier(0.53, 0.01, 0.35, 1.5);-webkit-transition:all 0.25s cubic-bezier(0.53, 0.01, 0.35, 1.5);transition:all 0.25s cubic-bezier(0.53, 0.01, 0.35, 1.5);}
 .transition, form button, form .question label, form .question input[type="email"]{-moz-transition:all 0.25s cubic-bezier(0.53, 0.01, 0.35, 1.5);-o-transition:all 0.25s cubic-bezier(0.53, 0.01, 0.35, 1.5);-webkit-transition:all 0.25s cubic-bezier(0.53, 0.01, 0.35, 1.5);transition:all 0.25s cubic-bezier(0.53, 0.01, 0.35, 1.5);}
 .transition, form button, form .question label, form .question textarea[type="text"]{-moz-transition:all 0.25s cubic-bezier(0.53, 0.01, 0.35, 1.5);-o-transition:all 0.25s cubic-bezier(0.53, 0.01, 0.35, 1.5);-webkit-transition:all 0.25s cubic-bezier(0.53, 0.01, 0.35, 1.5);transition:all 0.25s cubic-bezier(0.53, 0.01, 0.35, 1.5);}
